--- a/TSKit.Core.xcodeproj/xcshareddata/xcschemes/TSKit.CoreTests.xcscheme
+++ b/TSKit.Core.xcodeproj/xcshareddata/xcschemes/TSKit.CoreTests.xcscheme
@@ -5,6 +5,19 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForRunning = "YES"
+            buildForTesting = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "00063E011FDC4F6000568DFD"
+               BuildableName = "TSKit.CoreTests.xctest"
+               BlueprintName = "TSKit.CoreTests"
+               ReferencedContainer = "container:TSKit.Core.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
